Fix credits value weight and credits store input overflow

--- a/apps/customer_area/app/assets/stylesheets/glownet/customer/_base.scss
+++ b/apps/customer_area/app/assets/stylesheets/glownet/customer/_base.scss
@@ -79,7 +79,7 @@ a {
   margin-bottom: 0;
   color: $color_text;
   line-height: 1;
-  font-weight: lighter;
+  font-weight: bold;
 
   .currency-symbol {
     @include mscale($base-font-size * 2.5);
